--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -93,7 +93,7 @@
         <li><a href="index.html">홈</a></li>
         <li><a href="aboutme.html">자기소개</a></li>
         <li><a href="photo.html">내사진</a></li>
-        <li><a href="../src/today/TodayServlet.java">몇시에요</a></li>
+        <li><a href="http://localhost:8080/aboutme/today">몇시에요</a></li>
     </ul>
    </header>
     <section>
